Use SDL to inhibit WM's keyboard shortcuts
Use `SDL_SetWindowKeyboardGrab' to inhibit
keyboard shortcuts.

--- a/contrib/translations/de/de_DE.lng
+++ b/contrib/translations/de/de_DE.lng
@@ -2619,6 +2619,9 @@ Schnellstartprogramm...
 :MENU:mapper_shutdown
 Beende DOSBox-X
 .
+:MENU:mapper_capkeyboard
+Capture keyboard
+.
 :MENU:mapper_capmouse
 Maus einfangen
 .
