--- a/contrib/translations/de/de_pc98.lng
+++ b/contrib/translations/de/de_pc98.lng
@@ -2609,6 +2609,9 @@ Schnellstartprogramm...
 :MENU:mapper_shutdown
 Beende DOSBox-X
 .
+:MENU:mapper_capkeyboard
+Capture keyboard
+.
 :MENU:mapper_capmouse
 Maus einfangen
 .
