--- a/contrib/translations/fr/fr_FR.lng
+++ b/contrib/translations/fr/fr_FR.lng
@@ -2421,6 +2421,9 @@ Programme de lancement rapide...
 :MENU:mapper_shutdown
 Quitter
 .
+:MENU:mapper_capkeyboard
+Capturer le clavier
+.
 :MENU:mapper_capmouse
 Capturer la souris
 .
