--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+NEXT VERSION
+  - 
+
 2025.12.01
   - Video debug overlay: For Tandy and PCjr emulation, add information on
     the screen that shows the line mask, display and cpu memory banks and
