DOSBox IG: Actually, just use the ratio of width to height. The VESA BIOS modes are meant to display either 4:3 or 16:9 images. For any custom ratios, write your own driver (at this time)

--- a/TODO
+++ b/TODO
@@ -2,13 +2,15 @@ DOSBox Integrated Graphics:
 - Why does VBETEST's line drawing glitch out for mode 0x10D (320x200 15bpp). It makes the test for that mode
   either take way too long or never complete.
 - HD (1920x1080) modes crash the emulator if the Video Debug Overlay is enabled.
-- 16:9 VESA BIOS modes, when "fit to aspect ratio", are squeezed as if 4:3.
-- Add register to control pixel aspect ratio, so that it can fix the distorted frame when "fit to aspect ratio" is set. 1920x1080 has a 16:9 aspect ratio, not a 4:3 aspect ratio.
+- INT 10h modelist: Add a field to the modelist struct that allows the modelist to specify a display aspect ratio.
+- VESAMOED: Add parameters that allow the user to edit the VESA BIOS modelist and control the display aspect ratio. You want to make a custom mode with a wacky aspect ratio like 21:9? Go for it. Make sure the program indicates in the param list the aspect ratio settings only apply to machine=svga_dosbox.
 [DONE]
 - Need to implement get/set scanline length, so VBETEST can do the full panning test
 - Video debug overlay does not reflect Integrated Graphics width/height/bytesperscanline/hpel state when active,
   still shows VGA state underneath.
 - video debug overlay, when DOSBox IG is enabled, does not show hpel [FIXED]
+- Add register to control pixel aspect ratio, so that it can fix the distorted frame when "fit to aspect ratio" is set. 1920x1080 has a 16:9 aspect ratio, not a 4:3 aspect ratio.
+- 16:9 VESA BIOS modes, when "fit to aspect ratio", are squeezed as if 4:3. [FIXED]
 
 DOSBox scaler render system:
 - Render scaler code crashes if the GFX display is larger than 1920x1080. Add code to bypass scalers entirely and draw directly to the SDL surface if the resolution is greater than 1920x1080. At that high resolution there is no need for scalers (you probably can't see the effects of the more elaborate ones anyway), and you probably have a GPU through which you can use the OpenGL output mode to scale up to your screen if for some reason you have an 8K monitor.
