--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@ DOSBox Integrated Graphics:
 - VESAMOED: Add parameters that allow the user to edit the VESA BIOS modelist and control the display aspect ratio. You want to make a custom mode with a wacky aspect ratio like 21:9? Go for it. Make sure the program indicates in the param list the aspect ratio settings only apply to machine=svga_dosbox.
 - doublescan setting should become "true" "false" or "auto". "auto" is like true, but automatically becomes false when the user selects any render scaler other than the scale2x, etc. scalers. If the user wants to use the mame upscalers the doublescan setting shouldn't get in the way.
 - DOSBox IG should use vscale register for low res VESA BIOS modes to double the pixels as normal SVGA cards do.
+- Video debug overlay reporting source -> display resolutions for CGA/MDA/HERC/etc. assumes that 2x/4x row height is interleaved graphics, but remember there's that 160x100 text mode "graphics" mode some games use.
 [DONE]
 - Video debug overlay fix info for DOSBox IG, the text is too long on one line and the EPAL palette can overlap it.
 - Need to implement get/set scanline length, so VBETEST can do the full panning test
