Someone is calling RENDER_DrawLine too much at random, causing buffer overruns. Instead of assigning the scaler handler directly, assign to a function that calls the scaler line handler but only if the line count is less than the number of lines the render code expects to render. This should solve those random crashes with the OpenGL output, because the OpenGL output likes to allocate EXACTLY the amount of memory to hold the frame and buffer overruns can happen too easily that way

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,11 @@
 NEXT VERSION
+  - Apparently at random, VGA render will call RENDER_DrawLine too much,
+    causing buffer overruns at random, so, instead of directly assigning
+    the scaler line handler, assign a function that checks the rendered
+    line count and ensures that rendering stops at the correct line
+    count. This should fix some random crashes or corruptions, especially
+    on Linux with the OpenGL output which likes to allocate EXACTLY the
+    amount of memory required for the frame. (joncampbell123).
   - A patch was submitted to DOSLIB DSXMENU to incorporate non-selectable
     informational lines of text. Incorporate the updated DSXMENU binaries
     into DOSBox-X (joncampbell123).
