--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,15 @@
 NEXT VERSION
+  - VGA output will now automatically disable doublescan mode whenever an
+    advanced scaler, such as the "XBRZ" or the Advanced MAME scalers, are
+    selected, so that the scalers can do their job properly on the low
+    resolution graphics mode automatically. The user no longer has to
+    manaully turn off doublescan mode for those scalers to work. (joncampbell123).
+  - Added TV, Scanline, and RGB scaler variants appropriate for VGA
+    200-line modes with doublescan enabled (renders to 400 lines). In fact
+    supporting those scalers with 400-line VGA is arguably more visually
+    accurate than applying them to 200 lines of graphics, because it
+    better reflects the actual 400-line raster as it would be displayed
+    on a VGA monitor. (joncampbell123).
   - Apparently at random, VGA render will call RENDER_DrawLine too much,
     causing buffer overruns at random, so, instead of directly assigning
     the scaler line handler, assign a function that checks the rendered
