Remove render complete from Panning Latch event. Cursor size/position updates for Render on Demand should just render up to instead of setting the flag to render. Writes to CRTC start address will now signal Render On Demand + Wait For Changes to render the NEXT VGA frame, not the current, because EGA/VGA hardware latches it and waits for the next frame to use it. This fixes Wait for Changes issues with Xargon popup menus in-game.

--- a/TODO
+++ b/TODO
@@ -2,10 +2,11 @@ Render on Demand:
 - XARGON: Causes extra long pause going from initial title screen to main menu.
 
 Render on Demand + Wait for Changes:
+[DONE]
 - XARGON: Wait for Changes often fails to update display when Xargon shows a popup message on the screen.
           Xargon is using VGA unchained page flipping. The page flip to present the popup fails to render.
           Perhaps the RenderComplete VGA function is rendering the entire frame in response BEFORE the
-          new start address takes effect.
+          new start address takes effect. [FIXED]
 
 DOSBox Integrated Graphics:
 - INT 10h modelist: Add a field to the modelist struct that allows the modelist to specify a display aspect ratio.
