--- a/TODO
+++ b/TODO
@@ -9,6 +9,10 @@ Render on Demand + Wait for Changes:
   Wait for Changes fails to update display when game uses only the attribute controller palette to "fade in"
   and "fade out" the display. These games target the EGA where that is a only practical palette-based way
   to do it. There is no VGA palette on EGA.
+- Cosmo's Cosmic Adventure (cosmo):
+
+  Wait for Changes appears to affect Cosmo's rendering and page flipping. The normally regular (8fps?) frame
+  rate becomes somewhat irregular.
 [DONE]
 - XARGON: Wait for Changes often fails to update display when Xargon shows a popup message on the screen.
           Xargon is using VGA unchained page flipping. The page flip to present the popup fails to render.
