--- a/TODO
+++ b/TODO
@@ -71,18 +71,14 @@ AVI capture:
   If not set, always write a frame (which is standard DOSBox behavior). If you're recording DOS gameplay and the frame doesn't change
   very often, why waste disk space encoding the duplicate frames, even IF the ZMBV codec is very good at compressing such frames.
   This option should be a boolean, no "auto". If capturing to MPEG-TS, it should affect that too, though should emit a frame at least
-  4 times a second to prevent H.264 codec issues.
+  4 times a second to prevent H.264 codec issues. Also known here as "AVI capture skip unchanged option".
+- Add menu item to control AVI capture skip unchanged option.
 
 DOSBox menus:
 - Add menu item to control render on demand, and wait for changes. Selecting the menu will toggle between [auto], [off], and [on].
 - Add menu item to control AVI capture option not to write frames that don't change. Option is a boolean, so show check mark.
 
 DOSBox scaler render system:
-- Speaking of surface output and "fit aspect ratio", duplicating scan lines to stretch the frame looks like crap. It's very much like
-  what laptops did if you enabled "stretching" the display to fit the 800x600 LCD panel, they just duplicated pixels. The tech to
-  do bilinear interpolation as late 1990s and 2000s laptops did was not there yet. We're well past slower video memory and slower CPUs,
-  why not add code to do bilinear interpolation vertically instead of scan line doubling? Modern CPUs, especially when MMX, SSE, and AVX
-  are available, are quite fast at cross-blending scan lines to accomplish this.
 [DONE]
 - Render scaler code crashes if the GFX display is larger than 1920x1080. Add code to bypass scalers entirely and draw directly to the SDL surface if the resolution is greater than 1920x1080. At that high resolution there is no need for scalers (you probably can't see the effects of the more elaborate ones anyway), and you probably have a GPU through which you can use the OpenGL output mode to scale up to your screen if for some reason you have an 8K monitor. [FIXED]
 - Recent changes to the render system in DOSBox-X just BROKE the "fit aspect ratio" setting for output=surface! It no longer stretches the
